force-app/main/default/objects/Account/fields/Active_Grant_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Grant_Status__c</fullName>
    <label>Active Grant Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Previous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>