force-app/main/default/objects/Account/fields/Additional_Org_Classification__c.field-meta.xml
<CustomField>
    <fullName>Additional_Org_Classification__c</fullName>
    <label>Additional Org Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boys &amp; Girls Club</fullName>
            </value>
            <value>
                <fullName>Law Enforcement Agency</fullName>
            </value>
            <value>
                <fullName>Youth Sports League</fullName>
            </value>
            <value>
                <fullName>RBI League</fullName>
            </value>
            <value>
                <fullName>Community Non-profit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>