force-app/main/default/objects/Account/fields/BBBS_ID__c.field-meta.xml
<CustomField>
    <fullName>BBBS_ID__c</fullName>
    <label>BBBS ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>