force-app/main/default/objects/Account/fields/CEO__c.field-meta.xml
<CustomField>
    <fullName>CEO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CEO</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (CEO)</relationshipLabel>
    <relationshipName>Accounts_CEO</relationshipName>
    <type>Lookup</type>
</CustomField>