force-app/main/default/objects/Account/fields/CEO_Email_text__c.field-meta.xml
<CustomField>
    <fullName>CEO_Email_text__c</fullName>
    <formula>CEO__r.Email</formula>
    <label>CEO Email text</label>
    <type>Text</type>
</CustomField>