force-app/main/default/objects/Account/fields/CEO_Name__c.field-meta.xml
<CustomField>
    <fullName>CEO_Name__c</fullName>
    <formula>CEO__r.FirstName + &apos; &apos; + CEO__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CEO Name</label>
    <type>Text</type>
</CustomField>