force-app/main/default/objects/Account/fields/CEO_Title__c.field-meta.xml
<CustomField>
    <fullName>CEO_Title__c</fullName>
    <formula>CEO__r.Title</formula>
    <label>CEO Title</label>
    <type>Text</type>
</CustomField>