force-app/main/default/objects/Account/fields/Coaches__c.field-meta.xml
<CustomField>
    <fullName>Coaches__c</fullName>
    <label>Coaches</label>
    <type>TextArea</type>
</CustomField>