force-app/main/default/objects/Account/fields/Contacts_Need_Updating__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Need_Updating__c</fullName>
    <formula>OR(
CEO_Email__c != CEO_Email_text__c, 
AND(Local_Organization__r.CEO_Email__c != null, CEO_Email__c != Local_Organization__r.CEO_Email__c),
DOD_Email__c != DOD_Email_text__c, 
AND(Local_Organization__r.DOD_Email__c != null, DOD_Email__c != Local_Organization__r.DOD_Email__c),
Program_Coordinator_Email__c != Program_Coordinator_Email_text__c, 
AND(Local_Organization__r.Program_Coordinator_Email__c != null, Program_Coordinator_Email__c != Local_Organization__r.Program_Coordinator_Email__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contacts Need Updating</label>
    <type>Checkbox</type>
</CustomField>