force-app/main/default/objects/Account/fields/Current_Assessment_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Assessment_Due_Date__c</fullName>
    <label>Current Assessment Due Date</label>
    <type>Date</type>
</CustomField>