force-app/main/default/objects/Account/fields/Current_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Assessment_Status__c</fullName>
    <label>Current Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>