force-app/main/default/objects/Account/fields/Current_Grant_Year__c.field-meta.xml
<CustomField>
    <fullName>Current_Grant_Year__c</fullName>
    <label>Current Grant Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year_Options</valueSetName>
    </valueSet>
</CustomField>