force-app/main/default/objects/Account/fields/Demographic_Make_Up__c.field-meta.xml
<CustomField>
    <fullName>Demographic_Make_Up__c</fullName>
    <label>Demographic Make-Up</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>