force-app/main/default/objects/Account/fields/DOD__c.field-meta.xml
<CustomField>
    <fullName>DOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DOD</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Boys &amp; Girls Clubs in Indian Country</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Organizations (DOD)</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>