force-app/main/default/objects/Account/fields/DOD_Email_text__c.field-meta.xml
<CustomField>
    <fullName>DOD_Email_text__c</fullName>
    <formula
  >IF(Local_Organization__r.DOD__c != null, Local_Organization__r.DOD__r.Email, DOD__r.Email)</formula>
    <label>DOD Email text</label>
    <type>Text</type>
</CustomField>