force-app/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <label>D-U-N-S Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>