force-app/main/default/objects/Account/fields/DUNS_Current_Status__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Current_Status__c</fullName>
    <formula
  >IF(DUNS_Exp_Date__c &gt; TODAY(), &apos;Active&apos;, &apos;Expired&apos;)</formula>
    <label>DUNS Current Status</label>
    <type>Text</type>
</CustomField>