force-app/main/default/objects/Account/fields/DUNS_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Exp_Date__c</fullName>
    <label>DUNS Exp Date</label>
    <type>Date</type>
</CustomField>