force-app/main/default/objects/Account/fields/DUNS_Expired__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DUNS Expired</label>
    <type>Checkbox</type>
</CustomField>