force-app/main/default/objects/Account/fields/DUNS_Name__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Name__c</fullName>
    <label>DUNS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>