force-app/main/default/objects/Account/fields/DUNS_Number__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Number__c</fullName>
    <description
  >Formula to add leading zero to D-U-N-S number if necessary</description>
    <formula>LPAD(TEXT(DUNS__c), 9, &apos;0&apos; )</formula>
    <label>D-U-N-S</label>
    <type>Text</type>
</CustomField>