force-app/main/default/objects/Account/fields/DUNS_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Review_Status__c</fullName>
    <label>DUNS Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>