force-app/main/default/objects/Account/fields/Estimated_Date_of_Project__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_of_Project__c</fullName>
    <label>Estimated Date of Project</label>
    <type>Date</type>
</CustomField>