force-app/main/default/objects/Account/fields/FFATA_Required__c.field-meta.xml
<CustomField>
    <fullName>FFATA_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FFATA Required</label>
    <type>Checkbox</type>
</CustomField>