force-app/main/default/objects/Account/fields/Finance_Lead__c.field-meta.xml
<CustomField>
    <fullName>Finance_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Lead</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Finance Lead)</relationshipLabel>
    <relationshipName>Accounts_FinanceLead</relationshipName>
    <type>Lookup</type>
</CustomField>