force-app/main/default/objects/Account/fields/FirstPic_National_Org_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>FirstPic_National_Org_Code_Text__c</fullName>
    <description
  >DO NOT UPDATE MANUALLY. This is used for Account Sharing Only</description>
    <inlineHelpText
  >DO NOT UPDATE MANUALLY. This is used for Account Sharing Only</inlineHelpText>
    <label>FirstPic National Org Code Text</label>
    <length>10</length>
    <type>Text</type>
</CustomField>