force-app/main/default/objects/Account/fields/FirstPic_Org_Code__c.field-meta.xml
<CustomField>
    <fullName>FirstPic_Org_Code__c</fullName>
    <label>FirstPic Org Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>