force-app/main/default/objects/Account/fields/Free_Reduced_Lunch__c.field-meta.xml
<CustomField>
    <fullName>Free_Reduced_Lunch__c</fullName>
    <label>% Free/Reduced Lunch</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>