force-app/main/default/objects/Account/fields/Grant_Year_Options__c.field-meta.xml
<CustomField>
    <fullName>Grant_Year_Options__c</fullName>
    <label>Grant Year Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Year_Options</valueSetName>
    </valueSet>
</CustomField>