force-app/main/default/objects/Account/fields/Has_Sites__c.field-meta.xml
<CustomField>
    <fullName>Has_Sites__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Sites</label>
    <type>Checkbox</type>
</CustomField>