force-app/main/default/objects/Account/fields/Hold_History__c.field-meta.xml
<CustomField>
    <fullName>Hold_History__c</fullName>
    <label>Hold History</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>