force-app/main/default/objects/Account/fields/Hold_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hold_Notes__c</fullName>
    <label>Hold Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>