force-app/main/default/objects/Account/fields/Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Hold_Reason__c</fullName>
    <label>Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>SAM.gov Expired</fullName>
            </value>
            <value>
                <fullName>Current FYE Audit Past Due</fullName>
            </value>
            <value>
                <fullName>DOJ Certification Past Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>