force-app/main/default/objects/Account/fields/How_Each_Cohort_is_Spending_the_Stipend__c.field-meta.xml
<CustomField>
    <fullName>How_Each_Cohort_is_Spending_the_Stipend__c</fullName>
    <label>How Cohort is Spending the Stipend</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>