force-app/main/default/objects/Account/fields/How_Funds_Where_Used__c.field-meta.xml
<CustomField>
    <fullName>How_Funds_Where_Used__c</fullName>
    <label>How Funds Where Used</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>