force-app/main/default/objects/Account/fields/Implementation_Model__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Model__c</fullName>
    <label>Implementation Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Twice a Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>