force-app/main/default/objects/Account/fields/Local_Organization__c.field-meta.xml
<CustomField>
    <fullName>Local_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Local Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sites</relationshipLabel>
    <relationshipName>LocalOrganization</relationshipName>
    <type>Lookup</type>
</CustomField>