force-app/main/default/objects/Account/fields/Local_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Local_Organization_Id__c</fullName>
    <formula>Local_Organization__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local Organization Id</label>
    <type>Text</type>
</CustomField>