force-app/main/default/objects/Account/fields/Min_Age_of_Youth__c.field-meta.xml
<CustomField>
    <fullName>Min_Age_of_Youth__c</fullName>
    <label>Min Age of Youth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>