force-app/main/default/objects/Account/fields/National_Grant_Year_Options__c.field-meta.xml
<CustomField>
    <fullName>National_Grant_Year_Options__c</fullName>
    <formula
  >IF(INCLUDES(National_Organization__r.Grant_Year_Options__c,&quot;2017&quot;),&quot;2017;&quot;,null)&amp;
IF(INCLUDES(National_Organization__r.Grant_Year_Options__c,&quot;2018&quot;),&quot;2018;&quot;,null)&amp;
IF(INCLUDES(National_Organization__r.Grant_Year_Options__c,&quot;2019&quot;),&quot;2019;&quot;,null)&amp;
IF(INCLUDES(National_Organization__r.Grant_Year_Options__c,&quot;2020&quot;),&quot;2020;&quot;,null)&amp;
IF(INCLUDES(National_Organization__r.Grant_Year_Options__c,&quot;2017-2018&quot;),&quot;2017-2018;&quot;,null)&amp;
IF(INCLUDES(National_Organization__r.Grant_Year_Options__c,&quot;2018-2019&quot;),&quot;2018-2019;&quot;,null)&amp;
IF(INCLUDES(National_Organization__r.Grant_Year_Options__c,&quot;2019-2020&quot;),&quot;2019-2020;&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Grant Year Options</label>
    <type>Text</type>
</CustomField>