force-app/main/default/objects/Account/fields/National_Grants__c.field-meta.xml
<CustomField>
    <fullName>National_Grants__c</fullName>
    <label>National Grants</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OVC</fullName>
            </value>
            <value>
                <fullName>TRAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>