force-app/main/default/objects/Account/fields/National_Has_Sites__c.field-meta.xml
<CustomField>
    <fullName>National_Has_Sites__c</fullName>
    <formula>National_Organization__r.Has_Sites__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Has Sites</label>
    <type>Checkbox</type>
</CustomField>