force-app/main/default/objects/Account/fields/National_Organization__c.field-meta.xml
<CustomField>
    <fullName>National_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Organization</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>National Organization</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Local Organizations</relationshipLabel>
    <relationshipName>Organizations</relationshipName>
    <type>Lookup</type>
</CustomField>