force-app/main/default/objects/Account/fields/National_Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>National_Organization_Id__c</fullName>
    <formula>National_Organization__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>National Organization Id</label>
    <type>Text</type>
</CustomField>