force-app/main/default/objects/Account/fields/National_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>National_Organization_Name__c</fullName>
    <label>National Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>