force-app/main/default/objects/Account/fields/New_DUNS_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>New_DUNS_Exp_Date__c</fullName>
    <label>New DUNS Exp Date</label>
    <type>Date</type>
</CustomField>