force-app/main/default/objects/Account/fields/Number_of_8_13_Year_Olds_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_8_13_Year_Olds_Enrolled__c</fullName>
    <label>Number of 8-13 Year Olds Enrolled</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>