force-app/main/default/objects/Account/fields/Number_of_Cohorts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cohorts__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Cohorts</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>