force-app/main/default/objects/Account/fields/Number_of_Teens_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Teens_Enrolled__c</fullName>
    <label>Number of Teens Enrolled</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>