force-app/main/default/objects/Account/fields/Percent_American_Indian_Alaska_Native__c.field-meta.xml
<CustomField>
    <fullName>Percent_American_Indian_Alaska_Native__c</fullName>
    <label>Percent American Indian Alaska Native</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>