force-app/main/default/objects/Account/fields/Percent_Female__c.field-meta.xml
<CustomField>
    <fullName>Percent_Female__c</fullName>
    <label>Percent Female</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>