force-app/main/default/objects/Account/fields/Percent_Hispanic_or_Latino__c.field-meta.xml
<CustomField>
    <fullName>Percent_Hispanic_or_Latino__c</fullName>
    <label>Percent Hispanic or Latino</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>