force-app/main/default/objects/Account/fields/Percent_More_than_One_Race__c.field-meta.xml
<CustomField>
    <fullName>Percent_More_than_One_Race__c</fullName>
    <label>Percent More than One Race</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>