force-app/main/default/objects/Account/fields/Percent_Race_Not_Indicated__c.field-meta.xml
<CustomField>
    <fullName>Percent_Race_Not_Indicated__c</fullName>
    <label>Percent Race Not Indicated</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>