force-app/main/default/objects/Account/fields/Percent_White__c.field-meta.xml
<CustomField>
    <fullName>Percent_White__c</fullName>
    <label>Percent White</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>