force-app/main/default/objects/Account/fields/Percent_Youth_in_Single_Parent_Homes__c.field-meta.xml
<CustomField>
    <fullName>Percent_Youth_in_Single_Parent_Homes__c</fullName>
    <label>Percent Youth in Single Parent Homes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>