force-app/main/default/objects/Account/fields/Primary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Organizations (Primary Approver)</relationshipLabel>
    <relationshipName>Accounts_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>