force-app/main/default/objects/Account/fields/Primary_Approver_Email_text__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_Email_text__c</fullName>
    <formula>Primary_Approver__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Approver Email text</label>
    <type>Text</type>
</CustomField>