force-app/main/default/objects/Account/fields/Primary_Approver_On_Leave__c.field-meta.xml
<CustomField>
    <fullName>Primary_Approver_On_Leave__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Approver On Leave</label>
    <type>Checkbox</type>
</CustomField>