force-app/main/default/objects/Account/fields/Program_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Coordinator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Organizations (Program Coordinator)</relationshipLabel>
    <relationshipName>Organizations_PC</relationshipName>
    <type>Lookup</type>
</CustomField>