force-app/main/default/objects/Account/fields/Program_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator_Email__c</fullName>
    <label>Program Coordinator Email</label>
    <type>Email</type>
</CustomField>