force-app/main/default/objects/Account/fields/Program_Coordinator_Email_text__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator_Email_text__c</fullName>
    <formula
  >IF(Local_Organization__r.Program_Coordinator__c != null, Local_Organization__r.Program_Coordinator__r.Email, Program_Coordinator__r.Email)</formula>
    <label>Program Coordinator Email text</label>
    <type>Text</type>
</CustomField>