force-app/main/default/objects/Account/fields/Program_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Coordinator_Name__c</fullName>
    <formula
  >Program_Coordinator__r.FirstName + &apos; &apos; + Program_Coordinator__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Coordinator Name</label>
    <type>Text</type>
</CustomField>