force-app/main/default/objects/Account/fields/Secondary_Approver__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Approver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Secondary Approver)</relationshipLabel>
    <relationshipName>Accounts_Secondary</relationshipName>
    <type>Lookup</type>
</CustomField>