force-app/main/default/objects/Account/fields/Secondary_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Approver_Name__c</fullName>
    <formula
  >Secondary_Approver__r.FirstName + &apos; &apos; + Secondary_Approver__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Approver Name</label>
    <type>Text</type>
</CustomField>